syntax = "proto3";

option go_package = "github.com/abu-umair/ecommerce-go-grpc-be/pb/common";

package common;

message BaseResponse {
  int64 status_code = 1;
  string message = 2;
  bool is_error = 3;
}