syntax = "proto3";

package service;

service HelloWorldService {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse);
}

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string message = 1;
}